[gd_scene load_steps=55 format=2]

[ext_resource path="res://Enemies/Minotaur - Sprite Sheet.png" type="Texture" id=1]
[ext_resource path="res://Shadows/LargeShadow.png" type="Texture" id=2]
[ext_resource path="res://Hurtboxes + HitBoxes/softColition.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hurtboxes + HitBoxes/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hurtboxes + HitBoxes/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/wanderControler.tscn" type="PackedScene" id=6]
[ext_resource path="res://General/Stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://tests/advancedEnemy.gd" type="Script" id=8]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=9]
[ext_resource path="res://Music and Sounds/Effects/Hurt.wav" type="AudioStream" id=10]
[ext_resource path="res://Music and Sounds/Effects/EnemyAttack.wav" type="AudioStream" id=11]

[sub_resource type="Animation" id=7]
resource_name = "ATACKL1"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Minotaur - Sprite Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 117, 118, 119, 120, 121, 122, 123, 124 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -11.9196, -0.681122 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hitbox/CollisionShape2D:shape:radius")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 26.1942 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_atack"
}, {
"args": [  ],
"method": "attack_finished"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "ATACKL2"
tracks/0/type = "value"
tracks/0/path = NodePath("Minotaur - Sprite Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 155 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 17.0032, 17.0032 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 18.0497, 9.53568 ), Vector2( 18.0497, 9.53568 ), Vector2( -24.5203, 14.9846 ), Vector2( -18.7308, 14.9846 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_atack"
}, {
"args": [  ],
"method": "attack_finished"
} ]
}

[sub_resource type="Animation" id=1]
resource_name = "ATACKR1"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Minotaur - Sprite Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 24.4914 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 12.2602, -3.4056 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_atack"
}, {
"args": [  ],
"method": "attack_finished"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "ATACKR2"
tracks/0/type = "value"
tracks/0/path = NodePath("Minotaur - Sprite Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 65 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hitbox/CollisionShape2D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 17.0032 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -18.7308, 14.9846 ), Vector2( -25.2014, 4.76783 ), Vector2( 19.4119, 9.53568 ), Vector2( 15.3252, 8.51401 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_atack"
}, {
"args": [  ],
"method": "attack_finished"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "IDLEL"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Minotaur - Sprite Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 90, 91, 92, 93, 94 ]
}

[sub_resource type="Animation" id=3]
resource_name = "IDLER"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Minotaur - Sprite Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "RUNL"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Minotaur - Sprite Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 99, 100, 101, 102, 103, 104, 105, 106 ]
}

[sub_resource type="Animation" id=5]
resource_name = "RUNR"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Minotaur - Sprite Sheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16 ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "ATACKL1"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "ATACKR1"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "ATACKR1"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "ATACKL1"

[sub_resource type="AnimationNodeBlendSpace2D" id=13]
blend_point_0/node = SubResource( 9 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 10 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 11 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 12 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "ATACKL2"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "ATACKR2"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "ATACKR2"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "ATACKL2"

[sub_resource type="AnimationNodeBlendSpace2D" id=18]
blend_point_0/node = SubResource( 14 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 15 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 16 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 17 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "IDLER"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "RUNL"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "IDLER"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "IDLEL"

[sub_resource type="AnimationNodeBlendSpace2D" id=23]
blend_point_0/node = SubResource( 19 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 20 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 21 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 22 )
blend_point_3/pos = Vector2( -1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "RUNR"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "RUNL"

[sub_resource type="AnimationNodeAnimation" id=43]
animation = "RUNR"

[sub_resource type="AnimationNodeAnimation" id=44]
animation = "RUNL"

[sub_resource type="AnimationNodeBlendSpace2D" id=28]
blend_point_0/node = SubResource( 26 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 42 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 43 )
blend_point_2/pos = Vector2( 0, 1.1 )
blend_point_3/node = SubResource( 44 )
blend_point_3/pos = Vector2( 0, -1.1 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachine" id=35]
states/ATTACK1/node = SubResource( 13 )
states/ATTACK1/position = Vector2( 433, 38 )
states/ATTACK2/node = SubResource( 18 )
states/ATTACK2/position = Vector2( 433, 247 )
states/IDLE/node = SubResource( 23 )
states/IDLE/position = Vector2( 425, 137 )
states/RUN/node = SubResource( 28 )
states/RUN/position = Vector2( 279, 137 )
transitions = [ "RUN", "IDLE", SubResource( 29 ), "IDLE", "RUN", SubResource( 30 ), "ATTACK2", "IDLE", SubResource( 31 ), "IDLE", "ATTACK2", SubResource( 32 ), "IDLE", "ATTACK1", SubResource( 33 ), "ATTACK1", "IDLE", SubResource( 34 ) ]
start_node = "IDLE"

[sub_resource type="AnimationNodeStateMachinePlayback" id=36]

[sub_resource type="CircleShape2D" id=41]
radius = 24.4914

[sub_resource type="CircleShape2D" id=45]
radius = 11.5403

[sub_resource type="RectangleShape2D" id=37]
extents = Vector2( 14.8437, 19.021 )

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 12.3524, 18.3742 )

[sub_resource type="CapsuleShape2D" id=39]
radius = 5.41977
height = 13.2839

[sub_resource type="CircleShape2D" id=40]
radius = 128.026

[sub_resource type="Animation" id=46]
resource_name = "hit"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Minotaur - Sprite Sheet:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Minotaur - Sprite Sheet:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1.9026, 1.30804 ), Vector2( -0.356733, -0.118912 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Minotaur - Sprite Sheet:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.945498, 0.922394 ), Vector2( 0.883565, 1.01752 ), Vector2( 1, 1 ) ]
}

[node name="Minotauro" type="KinematicBody2D"]
collision_layer = 256
collision_mask = 385
script = ExtResource( 8 )
FRICTION = 700
MAX_SPEED = 40
knockback_friction = 200
knockback_speed = 60
atacks = [ "ATTACK1", "ATTACK2" ]

[node name="sombra" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( -2.65733, 11.4597 )
texture = ExtResource( 2 )

[node name="Minotaur - Sprite Sheet" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 20
hframes = 9
frame = 28
region_enabled = true
region_rect = Rect2( 0, 0, 864, 1908.4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ATACKL1 = SubResource( 7 )
anims/ATACKL2 = SubResource( 8 )
anims/ATACKR1 = SubResource( 1 )
anims/ATACKR2 = SubResource( 6 )
anims/IDLEL = SubResource( 2 )
anims/IDLER = SubResource( 3 )
anims/RUNL = SubResource( 4 )
anims/RUNR = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 35 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 36 )
parameters/ATTACK1/blend_position = Vector2( 0, 0 )
parameters/ATTACK2/blend_position = Vector2( 0, 0 )
parameters/IDLE/blend_position = Vector2( 0, 0 )
parameters/RUN/blend_position = Vector2( 0, 0 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 64
collision_mask = 12
damage = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 12.2602, -3.4056 )
shape = SubResource( 41 )

[node name="Hitbox2" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 64
collision_mask = 12

[node name="CollisionShape2D" parent="Hitbox2" index="0"]
position = Vector2( -3.0773, 6.18949 )
shape = SubResource( 45 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
position = Vector2( -2.74645, -8.08409 )
collision_layer = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 2.54038, 6.7416 )
shape = SubResource( 37 )

[node name="softColition" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CollisionShape2D" parent="softColition" index="0"]
position = Vector2( 1.99299, 6.47722 )
shape = SubResource( 38 )

[node name="Stats" parent="." instance=ExtResource( 7 )]
max_health = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 3.48774, 20.096 )
rotation = -1.5708
shape = SubResource( 39 )

[node name="wanderControler" parent="." instance=ExtResource( 6 )]
wanderRange = 15

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 9 )]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 40 )

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="hit_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 10.0

[node name="hit_anim" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 46 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hitbox"]

[editable path="Hitbox2"]

[editable path="Hurtbox"]

[editable path="softColition"]

[editable path="PlayerDetectionZone"]
